Use URI for sources to allow web or filesystem, add WRDS data test
Use a mock server for in-process integration test that simulates retrieving data
from WRDS service.

Update system test wrds_json data to match recent changes to WRDS format, see
issue #58828 of WRDS project for details.

The goal is to be able to use the scheme from the source to determine the
protocol used to get the data apart from the format of the data.

Refs #57856
Refs #55250
Refs #58828